# stage-4-notification-system

./: .gitignore  DOCKER-QUICKSTART.md  FIX-GIT-SECRET.md  README.md  REMOVE-SECRET-FROM-HISTORY.md  START-DOCKER.md  docker-start.ps1
Services/api-gateway/: .env.example  Cargo.toml  Dockerfile  README.md
Services/api-gateway/src/: main.rs  sample.rs
Services/api-gateway/src/config/: config.rs  config_scope.rs  mod.rs
Services/api-gateway/src/helpers/: helpers.rs  types.rs
Services/api-gateway/src/routes/: healthz.rs  mod.rs  notification.rs  template.rs  user.rs
Services/email-server/: .dockerignore  Dockerfile  README.md  env.example  package-lock.json  package.json
Services/email-server/src/: app.js  server.js
Services/email-server/src/clients/: templateServiceClient.js  userServiceClient.js
Services/email-server/src/config/: index.js  rabbitmq.js
Services/email-server/src/consumers/: email.consumer.js
Services/push-server/: .gitignore  Dockerfile  README.md  env.example  package-lock.json  package.json
Services/push-server/src/: server.js
Services/template-server/: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  env.example  requirements.txt  template_service.db
Services/template-server/src/: main.py
Services/user-server/: .gitignore  COMPLIANCE_CHECK.md  Dockerfile  QUICK_START.md  README copy.md  SETUP.md  env.example  eslint.config.cjs  package-lock.json  package.json
Services/user-server/src/: app.js  server.js
infra/: .env  .env.example  .gitignore  README.md  docker-compose.yml  docker-start.ps1  docker-start.sh
(+48 files in other folders)
