[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
r2d2 = "0.8" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.42"
rand = "0.9.2"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
thiserror = "1"
lapin = { version = "2", features = ["rustls"] }
futures-util = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
derive_more = "0.99"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
